# ZHCC

./: .gitignore  CCAS-Spec-v2.0.md  CCAS_SPEC_V1.0.md  Cargo.toml  LICENSE  README.md  XY语言体系结构规范_v2.0.md  build_l2.py  build_l2_compiler.ps1  build_l2_compiler_xy.py  build_l2_correct.py  build_l2_final.ps1  build_l2_main_xy.py  build_l2_simple.ps1  build_simple.bat  build_xyc.ps1  compile_l2_manual.ps1  compile_l2_msvc.ps1  complete_link.ps1  final_link.ps1  lambda_ir.txt  link_l2_compiler.ps1  link_l2_final.ps1  link_l2_simple.ps1  manual_build.ps1  simple_link.ps1  simple_test.xy  test.xy  test_list_member.xy.cache  xuanyu_ir_25116.ll
docs/: API_REFERENCE.md  EXAMPLES.md  TUTORIAL.md  编码规范.md
examples/: debug.xy  debug2.xy  debug3.xy  debug4.xy  evaluator.xy  file_io_test.xy  hello.xy  hello.zh  lexer.xy  math_utils.xy  repl_test.xy  simple_test.xy  test_break_continue.xy.cache  test_closure.xy.cache  test_enum.xy  test_file.xy  test_generic.xy.cache  test_import.xy  test_import_main.xy.cache  test_lambda.xy.cache  test_list.xy  test_mutable.xy.cache  test_simple.xy  test_simple_break.xy.cache  test_string.xy  test_tailcall.xy.cache  utils.xy
runtime/: runtime.c  runtime_clean.c  runtime_exec_cmd.c  runtime_fixed.c
runtime_xy/: array.xy  io.xy  memory.xy  runtime.xy  string.xy
src/: lib.rs  main.rs
stdlib/: README.md  array.xy  io.xy  math.xy  std.xy  string.xy
tests/: bootstrap_en.ps1  bootstrap_final.ps1  bootstrap_test.ps1  bootstrap_test.sh  compare_ir.ps1  complete_bootstrap_l2l3.ps1  l1_simple_snapshot.ps1  l1_take_snapshot.ps1  l3_bootstrap_test.ps1  (+5 more)
(+47 files in other folders)
