[package]
name = "zhcc"
version = "0.1.0"
edition = "2021"
authors = ["CCAS Team <zhcc@ccas.org>"]
description = "中文计算体系编译器 (Chinese Compiler Collection)"
license = "CC-BY-SA-4.0"

[dependencies]
thiserror = "1.0"
unicode-xid = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.inkwell]
version = "0.2.0"
features = ["llvm15-0"]
optional = true

[features]
default = []
llvm = ["inkwell"]
debug = []

[lib]
name = "zhcc"
path = "src/lib.rs"

[[bin]]
name = "zhcc"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
